--- a/app/views/grape_swagger_rails/application/index.html.erb
+++ b/app/views/grape_swagger_rails/application/index.html.erb
@@ -40,9 +40,9 @@
         } else if (options.api_auth == 'bearer') {
           key = "Bearer " + key
         }
-        window.authorizations.add("key", new ApiKeyAuthorization(options.api_key_name, key, options.api_key_type));
+        swaggerUi.api.clientAuthorizations.add("key", new SwaggerClient.ApiKeyAuthorization(options.api_key_name, key, options.api_key_type));
       } else {
-        window.authorizations.add("key", null);
+        swaggerUi.api.clientAuthorizations.add("key", nil);
       }
     });
 
